// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container "startupProbe" property has defaults if port is provided 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Pod",
    "metadata": Object {
      "labels": Object {
        "cdk8s.io/metadata.addr": "test-Pod-c815bc91",
      },
      "name": "test-pod-c890e1b8",
    },
    "spec": Object {
      "automountServiceAccountToken": false,
      "containers": Array [
        Object {
          "image": "foo",
          "imagePullPolicy": "Always",
          "name": "main",
          "ports": Array [
            Object {
              "containerPort": 8080,
            },
          ],
          "resources": Object {
            "limits": Object {
              "cpu": "1500m",
              "memory": "2048Mi",
            },
            "requests": Object {
              "cpu": "1000m",
              "memory": "512Mi",
            },
          },
          "securityContext": Object {
            "allowPrivilegeEscalation": false,
            "privileged": false,
            "readOnlyRootFilesystem": true,
            "runAsNonRoot": true,
          },
          "startupProbe": Object {
            "failureThreshold": 3,
            "tcpSocket": Object {
              "port": 8080,
            },
          },
        },
      ],
      "dnsPolicy": "ClusterFirst",
      "hostNetwork": false,
      "restartPolicy": "Always",
      "securityContext": Object {
        "fsGroupChangePolicy": "Always",
        "runAsNonRoot": true,
      },
      "setHostnameAsFQDN": false,
      "terminationGracePeriodSeconds": 30,
    },
  },
]
`;

exports[`Container "startupProbe" property is undefined if port is not provided 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Pod",
    "metadata": Object {
      "labels": Object {
        "cdk8s.io/metadata.addr": "test-Pod-c815bc91",
      },
      "name": "test-pod-c890e1b8",
    },
    "spec": Object {
      "automountServiceAccountToken": false,
      "containers": Array [
        Object {
          "image": "foo",
          "imagePullPolicy": "Always",
          "name": "main",
          "resources": Object {
            "limits": Object {
              "cpu": "1500m",
              "memory": "2048Mi",
            },
            "requests": Object {
              "cpu": "1000m",
              "memory": "512Mi",
            },
          },
          "securityContext": Object {
            "allowPrivilegeEscalation": false,
            "privileged": false,
            "readOnlyRootFilesystem": true,
            "runAsNonRoot": true,
          },
        },
      ],
      "dnsPolicy": "ClusterFirst",
      "hostNetwork": false,
      "restartPolicy": "Always",
      "securityContext": Object {
        "fsGroupChangePolicy": "Always",
        "runAsNonRoot": true,
      },
      "setHostnameAsFQDN": false,
      "terminationGracePeriodSeconds": 30,
    },
  },
]
`;

exports[`Container Instantiation properties are all respected 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Pod",
    "metadata": Object {
      "labels": Object {
        "cdk8s.io/metadata.addr": "test-Pod-c815bc91",
      },
      "name": "test-pod-c890e1b8",
    },
    "spec": Object {
      "automountServiceAccountToken": false,
      "containers": Array [
        Object {
          "command": Array [
            "command",
          ],
          "env": Array [
            Object {
              "name": "key",
              "value": "value",
            },
          ],
          "image": "image",
          "imagePullPolicy": "Never",
          "name": "name",
          "ports": Array [
            Object {
              "containerPort": 9000,
            },
          ],
          "resources": Object {
            "limits": Object {
              "cpu": "1500m",
              "memory": "2048Mi",
            },
            "requests": Object {
              "cpu": "1000m",
              "memory": "512Mi",
            },
          },
          "securityContext": Object {
            "allowPrivilegeEscalation": false,
            "privileged": false,
            "readOnlyRootFilesystem": true,
            "runAsNonRoot": true,
          },
          "startupProbe": Object {
            "failureThreshold": 3,
            "tcpSocket": Object {
              "port": 9000,
            },
          },
          "workingDir": "workingDir",
        },
      ],
      "dnsPolicy": "ClusterFirst",
      "hostNetwork": false,
      "restartPolicy": "Always",
      "securityContext": Object {
        "fsGroupChangePolicy": "Always",
        "runAsNonRoot": true,
      },
      "setHostnameAsFQDN": false,
      "terminationGracePeriodSeconds": 30,
    },
  },
]
`;

exports[`Container can mount container to a pv 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Pod",
    "metadata": Object {
      "labels": Object {
        "cdk8s.io/metadata.addr": "test-Pod-c815bc91",
      },
      "name": "test-pod-c890e1b8",
    },
    "spec": Object {
      "automountServiceAccountToken": false,
      "containers": Array [
        Object {
          "image": "image",
          "imagePullPolicy": "Always",
          "name": "main",
          "resources": Object {
            "limits": Object {
              "cpu": "1500m",
              "memory": "2048Mi",
            },
            "requests": Object {
              "cpu": "1000m",
              "memory": "512Mi",
            },
          },
          "securityContext": Object {
            "allowPrivilegeEscalation": false,
            "privileged": false,
            "readOnlyRootFilesystem": true,
            "runAsNonRoot": true,
          },
          "volumeMounts": Array [
            Object {
              "mountPath": "/path/to/mount",
              "name": "pvc-pvc-test-pv-c8b2a2c6",
            },
          ],
        },
      ],
      "dnsPolicy": "ClusterFirst",
      "hostNetwork": false,
      "restartPolicy": "Always",
      "securityContext": Object {
        "fsGroupChangePolicy": "Always",
        "runAsNonRoot": true,
      },
      "setHostnameAsFQDN": false,
      "terminationGracePeriodSeconds": 30,
      "volumes": Array [
        Object {
          "name": "pvc-pvc-test-pv-c8b2a2c6",
          "persistentVolumeClaim": Object {
            "claimName": "pvc-test-pv-c8b2a2c6",
            "readOnly": false,
          },
        },
      ],
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "name": "test-pv-c8b2a2c6",
    },
    "spec": Object {
      "awsElasticBlockStore": Object {
        "fsType": "ext4",
        "readOnly": false,
        "volumeID": "vol",
      },
      "claimRef": Object {
        "apiVersion": "v1",
        "kind": "PersistentVolumeClaim",
        "name": "pvc-test-pv-c8b2a2c6",
      },
      "persistentVolumeReclaimPolicy": "Retain",
      "volumeMode": "Filesystem",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "name": "pvc-test-pv-c8b2a2c6",
    },
    "spec": Object {
      "volumeMode": "Filesystem",
      "volumeName": "test-pv-c8b2a2c6",
    },
  },
]
`;
